implement auth0 sign-in, create knex table and seed data, create server-side and client-side hooks to fetch data, and found the base structure of the front-end application

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "express": "^4.17.2",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^2.5.1",
     "sqlite3": "^5.1.6",
     "superagent": "^8.1.2"
