--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/superagent": "^8.1.1",
     "@types/supertest": "^6.0.2",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "esbuild": "^0.18.19",
     "eslint": "^8.10.0",
     "eslint-plugin-import": "^2.25.4",
@@ -59,11 +60,15 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.2",
     "react": "^18.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "sass": "^1.50.1",
     "supertest": "^6.3.4",
+    "tailwindcss": "^3.4.4",
     "tsx": "^3.12.7",
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
@@ -71,7 +76,8 @@
   },
   "prettier": {
     "semi": false,
-    "singleQuote": true
+    "singleQuote": true,
+    "plugins": ["prettier-plugin-tailwindcss"]
   },
   "browserslist": "> 2%, not dead"
 }
