--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "curve-interpolator": "^3.3.1",
     "express": "^4.17.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
@@ -49,6 +50,7 @@
     "@types/supertest": "^6.0.2",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "cubic-spline": "^3.0.3",
     "esbuild": "^0.18.19",
     "eslint": "^8.10.0",
     "eslint-plugin-import": "^2.25.4",
@@ -77,7 +79,9 @@
   "prettier": {
     "semi": false,
     "singleQuote": true,
-    "plugins": ["prettier-plugin-tailwindcss"]
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   },
   "browserslist": "> 2%, not dead"
 }
