--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "curve-interpolator": "^3.3.1",
+    "d3": "^7.9.0",
     "express": "^4.17.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
@@ -43,6 +44,7 @@
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
     "@testing-library/react": "^14.0.0",
+    "@types/d3": "^7.4.3",
     "@types/express": "^4.17.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
