--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@auth0/auth0-react": "^2.2.4",
     "curve-interpolator": "^3.3.1",
     "d3": "^7.9.0",
+    "dotenv": "^16.4.5",
     "express": "^4.17.2",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
